# rs-uniswap-sniper

./: Cargo.toml  readme.md
contract/: foundry.toml
contract/interfaces/: IERC20.sol  IWETH.sol  Swaps.sol
contract/interfaces/Uniswap/: Uni_interfaces.sol  V2_Swapper.sol
contract/libraries/: Swapper.sol
contract/src/: sniper.sol
contract/test/: snipe_test.t.sol
src/: main.rs  mod.rs
src/bot/: bot_config.rs  bot_runner.rs  bot_sniper.rs  bot_start.rs  mod.rs  send_normal_tx.rs  send_tx.rs
src/forked_db/: database_error.rs  fork_factory.rs  mod.rs
src/oracles/: anti_rug_oracle.rs  block_oracle.rs  fork_db_oracle.rs  mempool_stream.rs  mod.rs  nonce_oracle.rs  pair_oracle.rs  sell_oracle.rs
src/utils/: constants.rs  helpers.rs  inject_evm.rs  mod.rs
src/utils/abi/: mod.rs
src/utils/evm/: mod.rs
src/utils/evm/insp/: access_list.rs  mod.rs
src/utils/evm/simulate/: mod.rs  sim.rs
src/utils/simulate/: access_list.rs  is_safu.rs  mod.rs  simulate.rs
src/utils/tx/: mod.rs
src/utils/tx/sniper/: call_data.rs  mod.rs
src/utils/types/: events.rs  mod.rs  structs.rs
src/utils/types/structs/: bot.rs  mod.rs  oracles.rs  pool.rs  snipe_tx.rs  tx_data.rs
temp/contract/interfaces/: IERC20.sol
temp/contract/interfaces/SafeERC20/: Address.sol  IERC20_Permit.sol  SafeERC20.sol
