[package]
name = "rs-uniswap-sniper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers-flashbots = { git = "https://github.com/onbjerg/ethers-flashbots" }
ethers = {version = "2.0.7", features = ["abigen", "ws"]}
revm = { version = "3.0.0", features = ["serde", "std", "optional_block_gas_limit", "optional_no_base_fee", "optional_balance_check"]}

tokio = { version = "1", features = ["full"] }
log = "0.4.17"
url = "2.3.1"
thiserror = "1.0.37"
fern = {version = "0.6", features = ["colored"]}
chrono = "0.4.23"
eth-encode-packed = "0.1.0"
sha3 = "0.10.8"
ethabi = "18.0.0"
serde_derive = "1.0.183"
simple_logger = "4.2.0"
colored = "2.0.0"
anyhow = "1.0.75"
futures = "0.3.5"
eyre = "0.6.8"
hashbrown = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
bigdecimal = "0.4.1"
lazy_static = "1.4.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5.4"




[profile.maxperf]
inherits = "release"
debug = true
lto = "fat"
opt-level = 3
codegen-units = 1